--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -71,6 +71,9 @@
   @media (max-width: 991.5px) {
     margin-top: -12px !important;
   }
+  .fas {
+    margin-top: -5px;
+  }
 }
 
 .navbar-logo {
