--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,4 +1,4 @@
 body {
-  background-image: url(/assets/img/patt.png);
+  background-image: url(../img/patt.png);
   background-position: 50% 0px;
 }
