--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,8 @@
 }
 
 .header__navbar {
+  position: relative;
+
   background-color: rgba(255, 255, 255, 0.8);
 }
 
@@ -85,6 +87,22 @@
 }
 .navbar-shop .fas {
   margin-top: -5px;
+}
+.navbar-shop__cart-counter {
+  position: absolute;
+  top: -12px;
+  left: -12px;
+
+  width: 24px;
+  height: 24px;
+
+  color: #ffffff;
+  border-radius: 12px;
+  background-color: #2c71b6;
+  -webkit-box-shadow: 0 0 4px black;
+          box-shadow: 0 0 4px black;
+
+  font-size: 16px;
 }
 
 .navbar-logo {
